# python-tutorials

./: .gitignore  README.md  poetry.toml  pyproject.toml
anti_patterns/: class_attributes.py  immutable_params.py
concurrency_examples/comparisons/: cpu_bound.py  io_bound.py
concurrency_examples/fastapi_usage/: no_async.py  use_async.py
decorators_usage/: builtin_decorators.py  log_error.py  retry_usage.py  storage_usage.py  without_using_decorators.py
dependency_injection/: api_client.py  data_handler.py
dependency_injection/tests/: test_data_handler.py
design_patterns/factory_pattern/: parser_factory.py
design_patterns/strategy_pattern/: with_class.py  with_methods.py
generators_usage/: builtin_generators.py  chuncking.py  pagination.py
logger_usage/: logger_disabled.py  use_complex_logger.py
python_typing/: typing_examples.py
resources/: sample1.html
utils/: decorators.py  general.py  generators.py
